frontend/src/components/Modal/modal.module.css
.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 95.5rem;
  height: 60rem;
  background-color: var(--color-background);
  padding: 5.5rem 3.5rem;
  padding-bottom: 0;
  z-index: 99;
  border: none;

  &::backdrop {
    background-color: rgba(0, 0, 0, 0.45);
  }
}

.close {
  position: absolute;
  top: 1.8rem;
  right: 1.8rem;
}

.modal__heading {
  color: var(--color-font-primary);
  font-size: 2.4rem;
  font-weight: 700;
  letter-spacing: 0.15px;
  margin-bottom: 3.4rem;
}

.modal__buttons {
  display: flex;
  gap: 1.5px;
}

.modal__buttons--big {
  gap: 2.4rem;
  position: absolute;
  bottom: 6rem;
  right: 3.5rem;
}

.modal__button {
  color: var(--color-font-primary);
  font-weight: 600;
  padding: 0.65rem 2.2rem;
  width: 12rem;
  margin-right: 1.5px;
}

.modal__button--inactive {
  font-weight: 400;
  background-color: var(--color-background-light);
  opacity: 0.6;
}

.modal__bigButton {
  color: var(--color-font-primary);
  font-weight: 600;
  font-size: 1.6rem;
  padding: 1rem 0;
  width: 20rem;
  border: 1px solid var(--color-accent);
}

.modal__bigButton--cancel {
  background-color: transparent;
  border: 1px solid rgba(255, 255, 255, 0.6);
}

.modal__form {
  margin-top: 4rem;
  display: flex;
  gap: 2.8rem;
}

.modal__column {
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.modal__column {
  width: 100%;
}

label {
  color: var(--color-font-primary);
  font-size: 1.4rem;
  letter-spacing: 0.15px;
}

.modal__field {
  display: flex;
  flex-direction: column;
  position: relative;

  textarea {
    height: 16rem;
    resize: none;
  }

  svg {
    position: absolute;
    top: 65%;
    right: 1.2rem;
    transform: translateY(-50%);
  }
}

.modal__field--second {
  margin-top: 0.4rem;
}

.modal__field--fourth {
  margin-top: 0.7rem;
}

.modal__input {
  background-color: var(--color-background-light);
  border: none;
  outline: none;
  padding: 0.7rem 1.4rem;
  font-size: 1.4rem;
  color: var(--color-font-primary);

  &::placeholder {
    color: var(--color-font-primary);
    opacity: 0.6;
  }
}

select.modal__input {
  appearance: none;
  cursor: pointer;
}

.modal__location {
  .modal__input {
    width: 37.5rem;
  }
}

